# Fedesearch

./: README.md  docker-compose.yml  install.sh
back/: .env  Dockerfile  README.md  main.py  pyproject.toml
back/app/api/endpoints/: config_router.py  search_router.py
back/app/api/mapper/: page_dto_mapper.py  result_dto_mapper.py  type_dto_mapper.py
back/app/common/: config.py  ioc.py  userConfig.json  user_config.py
back/app/common/utils/: extract_query_url.py
back/app/models/: page_model.py  result_model.py  type_model.py
back/app/repositories/: xng_repository.py
back/app/repositories/mapper/: page_repository_mapper.py  result_repository_mapper.py
back/app/schemas/: page_schema.py  params_schema.py  result_schema.py  type_schema.py  user_config_schema.py
back/app/services/: config_service.py  page_service.py
back/app/services/usecases/: full_search_use_case.py  update_config_use_case.py  web_search_use_case.py
deploy/private/searxng-docker-new/searxng/: settings.yml
front/project/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
front/project/public/: env.json
front/project/src/: index.html  main.css  main.css.map  styles.scss
front/project/src/app/: app.component.ts  app.routes.ts
front/project/src/app/models/: configParams.ts  page.ts  result.ts  type.ts
front/project/src/framework/: compile.sh  estructura.sh  main.scss  promptglobal.txt
front/project/src/framework/01_utilities/: _mixins.scss  _variables-css.scss  _variables-sass.scss
front/project/src/framework/02_base/: _font-family.scss  (+1 more)
(+44 files in other folders)
